Fixed distortion on keyboard pop-up

--- a/home/style.css
+++ b/home/style.css
@@ -121,14 +121,14 @@ li {
     overflow-y: scroll; 
     overflow-x: hidden;
     height: 100vh;
-    scroll-snap-type: y proximity;
+/*  scroll-snap-type: y proximity; */
     scroll-behavior: smooth;
 }
-
+/*
 .smooth-scroll section {
     scroll-snap-align: end;
 }
-
+*/
 .whiteSpace {
     width: 100%;
     height: 1px;
